rnsc/test_data/integration/error/parser/type_hints/double/trailing_token_recovers.rns
.class @double 3.14 unexpected_second_operand ; <- this error shouldn't block next error
unknown_token ; <- this error should be reported as well
